Displayed DealMatch according twitter offers

--- a/BestBuyDealMatches.ipynb
+++ b/BestBuyDealMatches.ipynb
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -2124,10 +2124,14 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['Save $85 on the LG 43\" Class LED 1080p Smart HDTV with HDR. #Deal',\n",
+       " 'Save $50 on the Hisense 43\" Class LED R7 Series 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
+       " 'Save $130 on the Sharp 43\" Class LED 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
+       " 'Save $100 on the TCL 43\" Class LED 5 Series 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
+       " 'Save $90 on the Sharp 43\" Class LED 2160p Smart 4K UHD TV with HDR Roku TV. #Deal']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2146,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
