Recommend products to customer using Reviews given by them

--- a/BestBuyDealMatches.ipynb
+++ b/BestBuyDealMatches.ipynb
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -2128,17 +2128,22 @@
        " 'Save $50 on the Hisense 43\" Class LED R7 Series 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
        " 'Save $130 on the Sharp 43\" Class LED 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
        " 'Save $100 on the TCL 43\" Class LED 5 Series 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
-       " 'Save $90 on the Sharp 43\" Class LED 2160p Smart 4K UHD TV with HDR Roku TV. #Deal']"
+       " 'Save $90 on the Sharp 43\" Class LED 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
+       " 'Save $80 on the Sharp 43\" Class LED 2160p Smart 4K UHD TV with Roku. #Deal',\n",
+       " 'Save $100 on the Sharp 43\" Class LED 2160p Smart 4K UHD TV with HDR Roku TV. #Deal',\n",
+       " 'Save $100 on the Toshiba 49\" Class LED 1080p Smart HDTV Fire TV Edition. #Deal',\n",
+       " 'Save $230 on the Samsung 49\" LED 1080p Smart HDTV. #Deal',\n",
+       " 'Save $50 on the LG 49\" Class LED LK5700 Series 1080p Smart HDTV. #Deal']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Sanity Test that  we got some deals\n",
-    "dealMatchGauranteed[:5]"
+    "dealMatchGauranteed[:10]"
    ]
   },
   {
@@ -2150,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2160,13 +2165,6 @@
     "\n",
     "dealMatchFile.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
