--- a/ProductRecommender.ipynb
+++ b/ProductRecommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AshCustomer ['sony_headphone', 'sony_phone']\n",
-      "AshStoreManager ['sony_headphone', 'premium']\n",
-      "Customer6 ['premium', 'sony_voice_assistant']\n",
-      "Customer5 ['microsoft_laptop', 'samsung_phone']\n",
-      "Customer4 ['sony_headphone', 'premium']\n",
-      "Customer3 ['sony_tv', 'samsung_sound_system']\n"
+      "AshCustomer ['sony_headphone', 'sony_voice_assistant']\n",
+      "AshStoreManager ['sony_tv', 'samsung_sound_system']\n",
+      "Customer6 ['microsoft_tv', 'premium']\n",
+      "Customer5 ['samsung_phone', 'sony_headphone']\n",
+      "Customer4 ['samsung_phone', 'sony_tv']\n",
+      "Customer3 ['samsung_fitness_watch', 'samsung_phone']\n"
      ]
     }
    ],
@@ -107,13 +107,6 @@
     "    \n",
     "out.close()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
